Initial test coverage, bug fix and code improvement